fix text overflow on user card

--- a/app/css/user-card.scss
+++ b/app/css/user-card.scss
@@ -19,7 +19,8 @@
   }
 
   > .info {
-    flex: 2 0 66%;
+    // flex: 2 0 66%;
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-content: center;
